edit text and logos on website

--- a/index.html
+++ b/index.html
@@ -73,20 +73,20 @@
                     <div class="row">
                         <div class="col-md-7">
                             <div class="description">
-                                <h2>Showcase 1 - Be serious about your music.</h2>
+                                <h2>Be serious about your music.</h2>
                                 <br>
-                                <h5>PlayIT! will become your favorite. It offers a list of features long enough that we could sit here talking about it all day. But, if you're serious about your music, you should definitely take a look. Find us one every market!</h5>
+                                <h5><strong>Sonic Flow</strong> will become your favorite new productivity app. If you're serious about your music, your work, and your safety, then you should definitely try it out. Find us on the Android market!</h5>
                             </div>
                             <div class="buttons">
-                                <button class="btn btn-fill btn-neutral">
+                                <!-- <button class="btn btn-fill btn-neutral">
                                 <i class="fa fa-apple"></i> Appstore
-                                </button>
+                                </button> -->
                                 <button class="btn btn-simple btn-neutral">
                                 <i class="fa fa-android"></i>
                                 </button>
-                                <button class="btn btn-simple btn-neutral">
+                                <!-- <button class="btn btn-simple btn-neutral">
                                 <i class="fa fa-windows"></i>
-                                </button>
+                                </button> -->
                             </div>
                         </div>
                         <div class="col-md-5  hidden-xs">
@@ -99,7 +99,7 @@
             </div>
             <div class="section section-gray section-clients">
                 <div class="container text-center">
-                    <h4 class="header-text">They were the first to go PlayIT</h4>
+                    <h4 class="header-text">Stream Music from All Your Favorite Apps</h4>
                     <p>
                         Build customer confidence by listing your users! Anyone who has used your service and has been pleased with it should have a place here! From Fortune 500 to start-ups, all your app enthusiasts will be glad to be featured in this section. Moreover, users will feel confident seing someone vouching for your product!<br>
                     </p>
@@ -121,7 +121,7 @@
                         <div class="col-md-6">
                             <div class="description">
                                 <h4 class="header-text">It's beautiful</h4>
-                                <p>We are 'Play It!', a startup specialising in funky headphones and speakers. We make and sell the mechanisms that let you listen to your favourite music everywhere! With our prestigious craftsmanship, remarkable client care and passion for design, you could say we’re the ‘all singing, all dancing’ kind. We think you’ll love working with us.</p>
+                                <p>We are <strong>Sonic Flow</strong>, a startup specialising in funky headphones and speakers. We make and sell the mechanisms that let you listen to your favourite music everywhere! With our prestigious craftsmanship, remarkable client care and passion for design, you could say we’re the ‘all singing, all dancing’ kind. We think you’ll love working with us.</p>
                                 <p>We make the objects that bring music closer to you. If you want to play music at home on a bad ass box of take in on the road with headphones, we make all the options possible.
                                 </p>
                             </div>
@@ -175,8 +175,8 @@
                                     <i class="pe-7s-musiclist"></i>
                                 </div>
                                 <div class="text">
-                                    <h4>Be serious about your music</h4>
-                                    <p>All appointments sync with your Google calendar so your availability is always up to date. See your schedule at a glance from any device.</p>
+                                    <h4>Be Serious About Your Work</h4>
+                                    <p><strong>Sonic Flow</strong> intelligently controls your noise-cancelling headphones to allow you to selectively hear only the important things and not be disturbed while you're working.</p>
                                 </div>
                             </div>
                         </div>
@@ -185,8 +185,8 @@
                                 <div class="icon">
                                     <i class="pe-7s-bell"></i>
                                 </div>
-                                <h4>Smart Notifications on hands</h4>
-                                <p>Automatic text and email reminders make sure customers always remember their upcoming appointments.</p>
+                                <h4>Stay Safe on the Go</h4>
+                                <p>Listen to music on your commute or while exercising, and <strong>Sonic Flow</strong> will </p>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -194,8 +194,8 @@
                                 <div class="icon">
                                     <i class="pe-7s-play"></i>
                                 </div>
-                                <h4>PlaIT on any devices</h4>
-                                <p>Take payments and run your business on the go, in your store and then see how it all adds up with analytics.</p>
+                                <h4>Wireless and Easy to Use</h4>
+                                <p>Bluetooth-enabled and </p>
                             </div>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                                 </div>
                                 <div class="carousel-testimonial-caption">
                                     <p>Drake, Artist</p>
-                                    <h3>"This is one of the most awesome apps I've ever seen! Wish you luck Creative Tim!"</h3>
+                                    <h3>"This is one of the most awesome apps I've ever seen!"</h3>
                                 </div>
                             </div>
                             <div class="item">
@@ -250,7 +250,7 @@
                     </div>
                     <div class="info">
                         <h1>Download the app for free!</h1>
-                        <p>blah blah blah </p>
+                        <p>currently available for Android devices only</p>
                         <a href="#" class="btn btn-neutral btn-lg btn-fill">DOWNLOAD</a>
                     </div>
                 </div>
